kubernetes/traefik/redirect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect-deployment
spec:
  selector:
    matchLabels:
      app: nginx-redirect
  replicas: 1 
  template:
    metadata:
      labels:
        app: nginx-redirect
    spec:
      containers:
      - name: nginx-redirect
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: redirect-conf
          items:
            - key: nginx.conf
              path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: redirect-service

spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: nginx-redirect
