kubernetes/traefik/redirect-old-twig.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-old-twig
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`twig.tchlabs.net`)
      kind: Rule
      services:
        - name: redirect-service
          port: 80
    - match: Host(`www.twigslot.com`)
      kind: Rule
      services:
        - name: redirect-service
          port: 80
