kubernetes/traefik/traefik-ingress-routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-auth
spec:
  forwardAuth:
    address: http://oathkeeper-service.twigslot:4456/decisions
    authResponseHeaders: 
      - X-User
      - Cookie
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /auth
      - /kratos
      - /twig-api
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: twig-ingress
  namespace: twigslot
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/auth`)
      kind: Rule
      middlewares:
        - name: middleware-stripprefix
      services:
        - name: selfservice-service
          port: 4455
    - match: PathPrefix(`/kratos`)
      kind: Rule
      middlewares:
        - name: middleware-stripprefix
      services:
        - name: kratos-service
          port: 4433
    - match: PathPrefix(`/twig-api`) 
      kind: Rule
      middlewares:
        - name: middleware-stripprefix
        - name: middleware-auth
      services:
        - name: flask-service
          port: 5000
    - match: Path(`/test`)
      kind: Rule
      services:
        - name: flask-service
          port: 5000
  tls:
    secretName: acme-secret
    domains:
    - main: twigslot.com
      sans:
      - staging2.twigslot.com
